--- a/integration-tests/jms-artemis-client/src/main/resources/application.properties
+++ b/integration-tests/jms-artemis-client/src/main/resources/application.properties
@@ -15,9 +15,13 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 #
+
+quarkus.artemis.devservices.extra-args=--no-autotune --mapped --no-fsync --java-options=-Dbrokerconfig.maxDiskUsage=-1
+
 # Overridden to false via @TestProfile(JmsArtemisDisable.class) for some tests
 # When false, we produce a custom ConnectionFactory via CustomConnectionFactory producer bean
 quarkus.artemis.enabled=true
+
 #
 # Only enabled with JmsArtemisPoolingTest
 quarkus.pooled-jms.pooling.enabled=false
