Disable artemis disk space checks

--- a/integration-tests/sjms-artemis-client/src/main/resources/application.properties
+++ b/integration-tests/sjms-artemis-client/src/main/resources/application.properties
@@ -15,5 +15,8 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 #
+
+quarkus.artemis.devservices.extra-args=--no-autotune --mapped --no-fsync --java-options=-Dbrokerconfig.maxDiskUsage=-1
+
 # Let Quarkus Artemis extension produce the ConnectionFactory
 quarkus.artemis.enabled=true
