Add hashicorp-vault native support
Fixes #6402

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -124,6 +124,7 @@
         <module>groovy-dsl</module>
         <module>grpc</module>
         <module>gson</module>
+        <module>hashicorp-vault</module>
         <module>hazelcast</module>
         <module>headersmap</module>
         <module>hl7</module>
