--- a/.github/workflows/assign-wontfix-issue-milestone.yaml
+++ b/.github/workflows/assign-wontfix-issue-milestone.yaml
@@ -36,7 +36,7 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Assign Closed Issue To Wont Fix Milestone
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             await github.rest.issues.update({
