--- a/.github/workflows/synchronize-dependabot-branch.yaml
+++ b/.github/workflows/synchronize-dependabot-branch.yaml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Download dependabot pull request changes
         id: download-pr-changes
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           result-encoding: string
           script: |
@@ -74,7 +74,7 @@ jobs:
             echo "pr-number=$(cat /home/runner/work/dependabot-pr/PR_NUMBER)" >> $GITHUB_OUTPUT
           fi
       - name: Checkout dependabot branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         if: steps.setup-dependabot-patches.outputs.branch-ref != ''
         with:
           ref: ${{ steps.setup-dependabot-patches.outputs.branch-ref }}
@@ -108,7 +108,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Trigger dependabot pull request workflow
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             await github.rest.actions.reRunWorkflow({
