--- a/extensions-jvm/flink/runtime/pom.xml
+++ b/extensions-jvm/flink/runtime/pom.xml
@@ -17,62 +17,59 @@
     limitations under the License.
 
 -->
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.apache.camel.quarkus</groupId>
-		<artifactId>camel-quarkus-flink-parent</artifactId>
-		<version>3.15.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<artifactId>camel-quarkus-flink</artifactId>
-	<name>Camel Quarkus :: Flink :: Runtime</name>
-	<description>Send DataSet jobs to an Apache Flink cluster.</description>
-	<properties>
-		<camel.quarkus.jvmSince>1.1.0</camel.quarkus.jvmSince>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.camel.quarkus</groupId>
-			<artifactId>camel-quarkus-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-flink</artifactId>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>io.quarkus</groupId>
-				<artifactId>quarkus-extension-maven-plugin</artifactId>
-				<configuration>
-					<!--Flink
-					uses Inverted Class Loading which causing issue for the Quarkus classloading
-					mechanism -->
-					<parentFirstArtifacts>
-						<parentFirstArtifact>org.apache.flink:flink-core</parentFirstArtifact>
-						<parentFirstArtifact>org.apache.flink:flink-rpc-core</parentFirstArtifact>
-						<parentFirstArtifact>org.apache.flink:flink-runtime</parentFirstArtifact>
-					</parentFirstArtifacts>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>io.quarkus</groupId>
-							<artifactId>quarkus-extension-processor</artifactId>
-							<version>${quarkus.version}</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.apache.camel.quarkus</groupId>
+        <artifactId>camel-quarkus-flink-parent</artifactId>
+        <version>3.15.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>camel-quarkus-flink</artifactId>
+    <name>Camel Quarkus :: Flink :: Runtime</name>
+    <description>Send DataSet jobs to an Apache Flink cluster.</description>
+    <properties>
+        <camel.quarkus.jvmSince>1.1.0</camel.quarkus.jvmSince>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-flink</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-extension-maven-plugin</artifactId>
+                <configuration>
+                    <!--Flink
+                    uses Inverted Class Loading which causing issue for the Quarkus classloading
+                    mechanism -->
+                    <parentFirstArtifacts>
+                        <parentFirstArtifact>org.apache.flink:flink-core</parentFirstArtifact>
+                        <parentFirstArtifact>org.apache.flink:flink-rpc-core</parentFirstArtifact>
+                        <parentFirstArtifact>org.apache.flink:flink-runtime</parentFirstArtifact>
+                    </parentFirstArtifacts>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>io.quarkus</groupId>
+                            <artifactId>quarkus-extension-processor</artifactId>
+                            <version>${quarkus.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
