--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -28,13 +28,13 @@ asciidoc:
     requires: "'util=camel-website-util,quarkus=xref:js/quarkus.js'"
 
     # Project versions
-    camel-version: 4.7.0 # replace ${camel.version}
+    camel-version: 4.8.0 # replace ${camel.version}
     camel-docs-version: next
     camel-quarkus-version: 3.15.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.15.0.CR1 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
     graalvm-docs-version: jdk21 # replace ${graalvm-docs.version}
-    mapstruct-version: 1.5.5.Final # replace ${mapstruct.version}
+    mapstruct-version: 1.6.0 # replace ${mapstruct.version}
     min-maven-version: 3.8.2 # replace ${min-maven-version}
     target-maven-version: 3.9.8 # replace ${target-maven-version}
 
