--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -193,6 +193,7 @@
         <module>platform-http-proxy-ssl</module>
         <module>protobuf</module>
         <module>pubnub</module>
+        <module>python</module>
         <module>qdrant</module>
         <module>quartz</module>
         <module>quartz-clustered</module>
