--- a/tooling/scripts/test-categories.yaml
+++ b/tooling/scripts/test-categories.yaml
@@ -181,6 +181,7 @@ group-10:
   - microprofile-health
   - platform-http-proxy
   - platform-http-proxy-ssl
+  - python
   - swift
 group-11:
   - compression-grouped
