--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,7 +35,7 @@ updates:
       - dependency-name: "com.squareup.okhttp3:okhttp"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
       # Test dependencies
-      - dependency-name: "com.github.tomakehurst:wiremock"
+      - dependency-name: "org.wiremock:wiremock-standalone"
       - dependency-name: "com.unboundid:unboundid-ldapsdk"
       - dependency-name: "me.escoffier.certs:certificate-generator-junit5"
       - dependency-name: "org.hamcrest:hamcrest"
