Enable testing with Azure Event Hubs Emulator
Fixes #6344

--- a/integration-test-groups/azure/azure-eventhubs/pom.xml
+++ b/integration-test-groups/azure/azure-eventhubs/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>awaitility</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-integration-tests-support-azure</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
