--- a/extensions-jvm/pulsar/runtime/pom.xml
+++ b/extensions-jvm/pulsar/runtime/pom.xml
@@ -55,7 +55,7 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-ext-jdk18on</artifactId>
+            <artifactId>bcprov-jdk18on</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse.angus</groupId>
