Add langchain4j-tokenizer JVM only extension

--- a/integration-tests-jvm/pom.xml
+++ b/integration-tests-jvm/pom.xml
@@ -76,6 +76,7 @@
         <module>json-patch</module>
         <module>jsonapi</module>
         <module>langchain4j-embeddings</module>
+        <module>langchain4j-tokenizer</module>
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
