--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -77,6 +77,7 @@
         <module>json-patch</module>
         <module>jsonapi</module>
         <module>langchain4j-embeddings</module>
+        <module>langchain4j-tokenizer</module>
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
