Add langchain4j-web-search JVM only extension

--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -79,6 +79,7 @@
         <module>langchain4j-embeddings</module>
         <module>langchain4j-tokenizer</module>
         <module>langchain4j-tools</module>
+        <module>langchain4j-web-search</module>
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
