Add antora.yml to CI workflow ignored paths

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -43,6 +43,7 @@ on:
       - '.github/workflows/pr-validate.yml'
       - '.github/workflows/quarkus-master-cron.yaml'
       - '.github/workflows/synchronize-dependabot-branch.yaml'
+      - 'docs/antora.yml'
   pull_request:
     branches:
       - main
@@ -67,6 +68,7 @@ on:
       - '.github/workflows/pr-validate.yml'
       - '.github/workflows/quarkus-master-cron.yaml'
       - '.github/workflows/synchronize-dependabot-branch.yaml'
+      - 'docs/antora.yml'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
