--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -42,6 +42,7 @@ on:
       - '.github/workflows/pr-validate.yml'
       - '.github/workflows/quarkus-master-cron.yaml'
       - '.github/workflows/synchronize-dependabot-branch.yaml'
+      - 'docs/antora.yml'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
