Exclude Dependabot config from triggering CI workflows

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -35,6 +35,7 @@ on:
       - 'camel-quarkus-sbom/**'
       - '.github/*.sh'
       - '.github/*.yaml'
+      - '.github/*.yml'
       - '.github/workflows/assign-issue-milestone.yaml'
       - '.github/workflows/assign-wontfix-issue-milestone.yaml'
       - '.github/workflows/camel-master-cron.yaml'
@@ -60,6 +61,7 @@ on:
       - 'NOTICE.txt'
       - '.github/*.sh'
       - '.github/*.yaml'
+      - '.github/*.yml'
       - '.github/workflows/assign-issue-milestone.yaml'
       - '.github/workflows/assign-wontfix-issue-milestone.yaml'
       - '.github/workflows/camel-master-cron.yaml'
