Configure maven-deploy-plugin to retry on failure

--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>${maven-deploy-plugin.version}</version>
+                    <configuration>
+                        <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
+                    </configuration>
                 </plugin>
 
                 <plugin>
