Add Camel Quarkus LangChain4j extension #6534

--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -2452,6 +2452,19 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-langchain4j</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-langchain4j-chat</artifactId>
             <version>${project.version}</version>
             <type>pom</type>
