--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -168,6 +168,7 @@
         <module>kubernetes</module>
         <module>kubernetes-cluster-service</module>
         <module>kudu</module>
+        <module>langchain4j</module>
         <module>langchain4j-chat</module>
         <module>language</module>
         <module>ldap</module>
