Fix build time processing of Kamelets with bean definitions
Fixes #6581

--- a/integration-tests/kamelet/src/main/resources/application.properties
+++ b/integration-tests/kamelet/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 ## ---------------------------------------------------------------------------
 camel.kamelet.setBodyFromProperties.bodyValueFromProperty=Camel Quarkus Kamelet Property
 
-quarkus.camel.kamelet.identifiers = injector,logger
+quarkus.camel.kamelet.identifiers = injector,logger,greeting
 
 # this is needed to actually test that kamelet are preloaded at build time:
 camel.component.kamelet.location = file:/invalid
