More debug logging in quartz-clustered

--- a/integration-tests/quartz-clustered/src/main/resources/application.properties
+++ b/integration-tests/quartz-clustered/src/main/resources/application.properties
@@ -38,3 +38,7 @@ quarkus.flyway.baseline-version = 1.0
 quarkus.flyway.baseline-description = Quartz
 
 quartz.node.name = NodeA
+
+quarkus.log.file.level=TRACE
+quarkus.log.category.\"io.quarkus.quartz\".level=TRACE
+quarkus.log.category.\"io.quarkus.scheduler\".level=TRACE
