--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -69,6 +69,7 @@
         <module>base64</module>
         <module>bean</module>
         <module>bean-validator</module>
+        <module>beanio</module>
         <module>bindy</module>
         <module>box</module>
         <module>braintree</module>
